--- a/package.json
+++ b/package.json
@@ -34,17 +34,20 @@
     "deploy": "next build && next export && firebase deploy --only hosting"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.8",
     "fecha": "^4.2.0",
     "glob": "^7.1.6",
     "gray-matter": "^4.0.2",
-    "next": "9.5",
+    "next": "^12.2.4",
+    "postcss": "^8.4.16",
     "raw-loader": "^4.0.1",
-    "react": "16.13.0",
-    "react-dom": "16.13.0",
-    "react-markdown": "^4.3.1",
-    "react-syntax-highlighter": "^12.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.3",
+    "react-syntax-highlighter": "^15.5.0",
     "rss": "^1.2.2",
-    "showdown": "^1.9.1"
+    "showdown": "^1.9.1",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
@@ -53,7 +56,7 @@
     "@types/react-syntax-highlighter": "^11.0.5",
     "@types/rss": "^0.0.28",
     "@types/showdown": "^1.9.3",
-    "favicons": "^6.1.0",
-    "typescript": "^3.8.3"
+    "favicons": "^7.0.0-beta.4",
+    "typescript": "^4.7.4"
   }
 }
